# climate-hub

./: CLAUDE.md
.claude/agents/: agent-refiner.md  agent-reviewer.md  agent-spawner.md  climate-researcher.md  gcp-data-engineer.md  gcp-terraform-deployer.md  skill-creator.md  software-architect.md
.claude/skills/: bigquery-schema-design.md  data-quality-validation.md  gcp-pipeline-architecture.md
.github/workflows/: SETUP.md  terraform-deploy-dev.yml  terraform-destroy-dev.yml
climate/: .env.example  .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md
climate/docs/: BIGQUERY_SCHEMAS.md  DATA_INTEGRATION_PLAN.md  GETTING_STARTED.md
climate/src/: main.rs
climate/src/bigquery/: client.rs  loader.rs  mod.rs  schema.rs
climate/src/datasources/: mod.rs  nasa_power.rs  noaa_cdo.rs
climate/src/models/: mod.rs
climate/src/utils/: error.rs  mod.rs
config/connectors/: salesforce_accounts.yaml  stripe_payments.yaml  template.yaml
docs/architecture/: gcp-data-platform.md
docs/architecture/diagrams/: data-flow.mmd  ingestion-patterns.mmd  overall-architecture.mmd
docs/data-engineering/: CLIMATE_DATA_INGESTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  NASA_GISTEMP_IMPLEMENTATION.md
docs/datasets/: climate-data-sources.md
infrastructure/terraform/: .gitignore
infrastructure/terraform/bootstrap/: .gitignore
infrastructure/terraform/environments/dev/: .terraform.lock.hcl  (+6 more)
schemas/: salesforce_accounts.json  stripe_payments.json  template.json
src/cloud-functions/global-warming-api-ingest/: main.py
src/cloud-functions/nasa-gistemp-ingest/: main.py
(+64 files in other folders)
