[package]
name = "climate-data-platform"
version = "0.1.0"
edition = "2021"
authors = ["Climate Data Team"]
description = "Centralized climate data platform integrating multiple data sources with BigQuery"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
gcp-bigquery-client = "0.23"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
async-trait = "0.1"
thiserror = "2.0"

[dev-dependencies]
mockito = "1.6"
